--- a/TicketManager.Api/appsettings.json
+++ b/TicketManager.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TicketManager;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
+  "JwtSettings": {
+    "Secret": "super-secret-forty-character-long-key-01",
+    "ExpiryMinutes": 60,
+    "Issuer": "TicketManager",
+    "Audience": "TicketManager"
+  }
 }
