remove connectionstring names

--- a/TicketManager.Api/appsettings.json
+++ b/TicketManager.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TicketManager;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=YOUR_SERVER;Database=YOUR_DATABASE;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "JwtSettings": {
     "Secret": "super-secret-forty-character-long-key-01",
